[fix] url경로 수정